<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hebi_ros2_examples</name>
  <version>1.0.0</version>
  <description>HEBI ROS2 examples</description>
  <maintainer email="hariharan@hebirobotics.com">Hariharan Ravichandran</maintainer>
  <license>MIT</license>

  <author email="hariharan@hebirobotics.com">Hariharan Ravichandran</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>hebi_cpp_api</depend>
  <depend>hebi_msgs</depend>
  <depend>tf</depend>
  <!-- <depend>action_msgs</depend> -->
  <!-- <depend>std_msgs</depend> -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>nav_msgs</depend> -->
  <depend>trajectory_msgs</depend>
  <!-- <depend>control_msgs</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
